added advanced example

--- a/example.html
+++ b/example.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Globe.js example</title>
+		<title>globe.js example</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="./globe.css" type="text/css" media="screen"/>
 		<script type="text/javascript" src="./three.min.js"></script>
