--- a/advancedExample.html
+++ b/advancedExample.html
@@ -32,7 +32,7 @@
 		<br>
 		<button type="button" onClick="alert('The globe has marker: ' + globe.hasMarker());">Does the globe have any marker?</button>
 		
-		<div id="globe" class=".globe-background"></div>
+		<div id="globe" class="globe-background"></div>
 		<script type="text/javascript">
 			var container = document.getElementById("globe");
 			globe = new GLOBE.main(container, "./textures/");
