--- a/example.html
+++ b/example.html
@@ -8,7 +8,7 @@
 		<script src="./globe.min.js" type="text/javascript"></script>
 	</head>
 	<body>
-		<div id="globe" class=".globe-background"></div>
+		<div id="globe" class="globe-background"></div>
 		<script type="text/javascript">
 			var container = document.getElementById("globe");
 			globe = new GLOBE.main(container, "./textures/");
